# fluent-bit

./: .gitignore  CMakeLists.txt
include/fluent-bit/: flb_output.h  flb_plugin.h  flb_thread_libco.h
lib/monkey/include/monkey/mk_core/: mk_list.h  mk_thread.h
lib/monkey/mk_core/: mk_thread.c
plugins/: CMakeLists.txt
plugins/out_rust_stdout/: CMakeLists.txt  Cargo.toml  README.md  build.rs
plugins/out_rust_stdout/fluent_bit_binding/: Cargo.toml  build.rs  wrapper.h
plugins/out_rust_stdout/fluent_bit_binding/src/: lib.rs
plugins/out_rust_stdout/fluent_bit_out_std/: Cargo.toml  build.rs
plugins/out_rust_stdout/fluent_bit_out_std/src/: lib.rs
plugins/out_rust_stdout/src/: lib.rs
plugins/out_stdout/: stdout.c
plugins/rust_binding/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.rs  docker-compose.yml  fluent-bit.conf  wrapper.h
plugins/rust_binding/src/: lib.rs
src/: flb_config_map.c  flb_engine.c  flb_engine_dispatch.c  flb_output.c  flb_plugin.c  flb_thread_libco.c
