[package]
name = "fluent_bit_binding"
version = "0.1.0"
authors = ["Yenlin Chen <3822365+hencrice@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "~0.53"

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type=["rlib"]