[package]
name = "fluent_bit_out_std"
version = "0.1.0"
authors = ["Yenlin Chen <3822365+hencrice@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent_bit_binding={path="../fluent_bit_binding"}
serde={version="~1.0", features = ["derive"]}
rmp-serde="~0.14"

[lib]
 # Creates static lib to be liniked by the final fluent-bit executable:
 # https://doc.rust-lang.org/reference/linkage.html
crate-type=["staticlib"]